# composio_task

./: .env.example  README.md  apps.md  main.py  pyproject.toml
agent/: __init__.py  analyzer.py  html_generator.py  models.py  prompts.py  researcher.py  tools.py  verifier.py
agent/templates/: index.html
data/: analysis.json  results.json  verification_report.json
output/: index.html
