[project]
name = "composio-app-research"
version = "0.1.0"
description = "Automated research pipeline for analyzing 100 apps' API surfaces, auth methods, and buildability for Composio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=0.11.0",
    "openai>=1.40.0",
    "instructor>=1.7.0",
    "pydantic>=2.9.0",
    "google-genai>=1.0.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "composio-openai>=0.7.0",
    "rich>=13.7.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[tool.setuptools]
packages = ["agent"]

[project.scripts]
research = "agent.researcher:main"
verify = "agent.verifier:main"
analyze = "agent.analyzer:main"
generate = "agent.html_generator:main"
